# vhdl_sim

./: Cargo.toml  default.nix  relay.nix  run.sh  run_relay.sh
conn/: Cargo.toml
conn/src/: lib.rs
examples/: cpu.vhdl  example.v  example.vhdl
libvhdl_conn/: Cargo.toml
libvhdl_conn/src/: lib.rs
relay/: Cargo.toml  build.rs
relay/shim/: shim.vhdl  verilog.c
relay/src/: build.rs  local.rs  main.rs  remote.rs  run.rs  uploaded.rs  workspace.rs
relay/ui/: app.js  index.html  styles.css
rtl/: circuit copy._vhdl  circuit._vhdl  circuit.vhdl  tb.vhdl
src/: cpu.vhdl  dram.vhdl  iram.vhdl
src_verilog/: bcd.v  example.v  keypad_input.v  seg_plex.v
