[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"